- "redirect" now has support for "whitelist". Whitelisted websites will always be shown in full view, skipping readability/unmerdify
- Support for multi-lines input in Gemini (by JMCS)
- Adding support for tmux clipboard and cleaning clipboard code (by Stephen)
- Default ON prompt color set to yellow (by Matin Mohammadi)
- "copy" now default to "url" and works coherently 
- hide pictures which are from blocked URL (and hide IMG links pointing to blocked URL)
- "reply" now also looks for "contact" pages
- CRASHFIX: "list" was crashing because of a bad call to super() (reported by Toby Kurien)
- CRASHFIX: "--features" was crashing (patch by Étienne Mollier)
- BUGFIX: "info" was sometimes returning the wrong cleaning method
- BUGFIX: history latest items was sometimes overwritten with multiple back/forward
- BUGFIX: replace wrongly encoded UTF-8 in Gemini page instead of crashing (Pawel Piatkwoski)
- PACKAGING: use hatch-requirements-txt (by link2xt)
- Lot of typos fixed (by Sebastian Rasmussen)
- Fixed xkcdpunk manpage (by Étienne Mollier)
- "unmerdify" manpage (by Étienne Mollier)
- TRANSLATION: added Swedish SV (by Sebastian Rasmussen)
- TRANSLATION: added Persian (Farsi) (by Mati Mohammadi)
- refactorisation to handle every external binary in one place in offutils.py
- Improve compatibility with python < 3.10 by removing type annotations
- Improve compatibilty with python < 3.11 by removing include_hidden (by Lumin Etherlight)
- temporary files in /tmp/ are now identified with "openk." prefix (by Silica)

## 3.0 - February 9th 2026
Changes since 2.8
Important changes:
- "opnk" is deprecated and replaced by "openk"
- Default image size now 100 instead of 40 (can be restored with "set images_size 40")
- Links to available feeds are now displayed at the bottom of HTML pages
- "root" has been modified to go to the root of the capsule/userspace "root /" for real root
- Images are now displayed in Gemini. This can be disabled with "set gemini_images false"